working on layout

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,8 +3,8 @@
   <title>Fwitter Homepage</title>
 </head>
 <body>
-  <h1>Welcome to Fwitter!</h1>
+<!--   <h1>Welcome to Fwitter!</h1>
   <a href="/signup">Sign Up</a><br>
-  <a href="/login">Log In</a>
+  <a href="/login">Log In</a> -->
 </body>
 </html>
