--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -1,1 +1,11 @@
-<h2> <%= @tweet.user.username %>: <%= @tweet.content %> </h2>
+<h2> <a href="/users/<%=@tweet.user.slug%>"><%= @tweet.user.username %></a>: <%= @tweet.content %> </h2>
+
+<% if current_user == @tweet.user %>
+  <form method="post" action="/tweets/<%=@tweet.id%>/delete">
+    <input id="hidden" type="hidden" name="_method" value="DELETE">
+    <h3>Delete Tweet</h3>
+    <input type="submit" value="Delete Tweet">
+  </form>
+
+  <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
+<% end %>
