--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -3,11 +3,10 @@
 </head>
 <body>
   <h1>Welcome, <%= @user.username %>!</h1>
-  <a href="/users/<%=@user.slug%>"><h3>View your tweets</h3></a>
   <h3>Tweets:</h3>
   <% Tweet.all.each_with_index do |tweet,i| %>
     <%= "#{i+1}. "%><%=tweet.content%><br>
-    <%= "- " %><%=tweet.user.username%><br>
+    <%= "@" %><%=tweet.user.username%><br>
   <% end %><br>
   <a href="/logout"><input type="button" value="Log Out"></a>
 </body>
