--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -14,7 +14,11 @@
 <br><br>
 <a href='/tweets/edit'>Edit Tweet</a>
 <br><br>
-<a href='/delete'>Delete Tweet</a>
+<form method="post" action="/tweets/<%=@tweet.id%>/delete">
+<input id="hidden" type="hidden" name="_method" value="DELETE">
+<input type="submit" value="Delete Tweet">
+</form>
+
 
 
 <br> <br><br><br>
