--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -5,8 +5,11 @@
 <h2>Tweet</h2>
 <p><%=@tweet.content%></p>
 <br />
-<a href='/tweets/<%=@tweet.id%>/edit'>Edit Tweet</a>
+
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
+
 <form action ='/tweets/<%=@tweet.id%>/delete' method='POST'>
   <input type='hidden' id='hidden' name='_method' value ='DELETE' />
   <input type='submit' value='Delete Tweet' />
 </form>
+<a href="/logout">Logout</a>
