--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,6 +1,3 @@
-<h4><%=@tweet.user.username%></h4>
-<br />
-<br />
 <h2>New Tweet</h2>
 <br />
 <br />
@@ -8,5 +5,5 @@
   <label>Tweet: <input type='text' name='content' id='content' /></label>
   <br />
   <br />
-  <input type='text' value='submit' />
+  <input class="btn btn-primary" type="submit" value="submit">
 </form>
