--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -3,7 +3,11 @@
 <br />
 <h3>Tweets</h3>
 <%@tweets.each do |tweet|%>
-  <a href="/tweets/<%=tweet.id%>"><%=tweet.content%></a>
+  <%=tweet.user.username%>: <a href="/tweets/<%=tweet.id%>"><%=tweet.content%></a>
 <%end%>
-
+<br />
+<br />
+<br />
+<a href='/tweets/new'>New Tweet</a>
+<br />
 <a href="/logout">Logout</a>
