--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,15 +1,17 @@
-<h4><%=@tweet.user.username%></h4>
-<br />
-<br />
-<br />
 <h2>Tweet</h2>
 <p><%=@tweet.content%></p>
 <br />
-
-<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
-
+<br />
 <form action ='/tweets/<%=@tweet.id%>/delete' method='POST'>
   <input type='hidden' id='hidden' name='_method' value ='DELETE' />
   <input type='submit' value='Delete Tweet' />
+  <br />
 </form>
+<% if @user == @tweet.user%>
+    <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
+<%end%>
+<br />
+<a href='/tweets'>View All Tweets</a>
+<br />
+<br />
 <a href="/logout">Logout</a>
