--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,1 +1,11 @@
-Here are the tweets!
+<h1>Here are the Fweets</h1>
+
+Welcome, <%= @user.username %>
+
+<% @user.tweets.each do |tweet| %>
+  <p>look at this tweet <%= tweet.content %></p>
+<% end %>
+
+<a href="/tweets/new">Create New Tweet</a>
+
+<a href="/logout">Log Out</a>
