--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -2,5 +2,5 @@
 <form action="/login" method="POST" accept-charset="utf-8">
   <label>username:<input type="text" name="username" value=""></label>
   <label>password:<input type="text" name="password" value=""></label>
-  <label><input type="submit" name="login" value="login"></label>
+  <label><input type="submit" name="submit" value="submit"></label>
 </form>
