--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -3,5 +3,5 @@
   <label>username:<input type="text" name="username" value=""></label>
   <label>email address:<input type="text" name="email" value=""></label>
   <label>password:<input type="text" name="password" value=""></label>
-  <label><input type="button" name="signup" value="">signup</label>
+  <input type="submit" value="submit">
 </form>
