--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -3,7 +3,7 @@ Your Tweet
 
 <%= @tweet.content%>
 
-<a href="/tweets/<%= @tweet.id %>/edit">Edit your Tweet here</a>
+<a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
 
 <form method="POST" action="/tweets/<%= @tweet.id %>/delete">
 <!-- <input id="hidden" type="hidden" name="_method" value="Delete Tweet"> -->
