--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -2,12 +2,12 @@
 
 <form action="/signup" method="POST">
   <label>Username:</label>
-  <input type="text" name="username" value="username">
+  <input type="text" name="username" >
   <br></br>
   <label>Email:</label>
-  <input type="text" name="email" value="email">
+  <input type="text" name="email" >
   <br></br>
   <label>Password:</label>
-  <input type="text" name="password" value="password">
-  <input type="submit" value="submit">
+  <input type="text" name="password" >
+  <input type="submit" value="submit"></input>
 </form>
