--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -2,6 +2,6 @@
 
 <form action="/tweets" method="POST">
   <label>Content:</label>
-  <input name="content" value="content">
-  <input type="submit" value="submit"/>  
+  <input type="text" name="content"/>
+  <input type="submit" value="submit" required="true"/>  
 </form>
