--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,12 +1,13 @@
+
 <h1>Edit your Tweet below</h1>
-
+<!-- 
 <%= @tweet.content %>
-<form action="/tweets/:id" method="PATCH">
-  
+ --><form action="/tweets/<%= @tweet.id %>" method="POST">
+  <input id="hidden" type="hidden" name="_method" value="patch">
   <label>Content</label>
-  <input type="text" name="content" value="content">
+  <input type="text" name="content" value="<%= @tweet.content %>">
 
-  <input id="hidden" type="hidden" name="_method" value="patch"/>
+  
 
-  <input type="submit" value="submit"/>
+  <input type="submit" value="submit"></input>
 </form>
