--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,8 +1,7 @@
 
 <h1>Edit your Tweet below</h1>
-<!-- 
-<%= @tweet.content %>
- --><form action="/tweets/<%= @tweet.id %>" method="POST">
+
+<form action="/tweets/<%= @tweet.id %>" method="POST">
   <input id="hidden" type="hidden" name="_method" value="patch">
   <label>Content</label>
   <input type="text" name="content" value="<%= @tweet.content %>">
