--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,12 +1,13 @@
 <!-- create an edit link -->
-Your Tweet
+<h1>Your Tweet</h1>
 
-<%= @tweet.content%>
+<p><%= @tweet.content%></p> 
 
 <a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
 
 <form method="POST" action="/tweets/<%= @tweet.id %>/delete">
 <!-- <input id="hidden" type="hidden" name="_method" value="Delete Tweet"> -->
+<br></br>
 <button type="submit" name="Delete Tweet" value="Delete Tweet">Delete Tweet</button>
 </form>
 <!-- create form for delete function -->
