--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -4,9 +4,7 @@
 <form action="/tweets/<%= @tweet.id %>" method="POST">
   <input id="hidden" type="hidden" name="_method" value="patch">
   <label>Content</label>
-  <input type="text" name="content" value="<%= @tweet.content %>">
+  <input type="text" name="content" value="<%= @tweet.content %>" required>
 
-  
-
-  <input type="submit" value="submit"></input>
+  <input type="submit" value="submit">
 </form>
