--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,9 +1,9 @@
 <h1>Welcome, <%= current_user.username%></h1>
+<p>Click on your tweet for more options</p>
 
 <% Tweet.all.each do |tweet| %>
-<%= tweet.content %>
-<%= tweet %>
+<p><a href="/tweets/<%= tweet.id %>"><%= tweet.content %></a></p>
 <% end %>
 
-<a href="/tweets/new">Tweet</a>
-<a href="/logout">Log out</a>
+<p><a href="/tweets/new">Tweet</a></p>
+<p><a href="/logout">Log out</a></p>
