--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,10 +1,10 @@
-
 <h1>Edit your Tweet below</h1>
 
 <form action="/tweets/<%= @tweet.id %>" method="POST">
-  <input id="hidden" type="hidden" name="_method" value="patch">
+
+  <input id="hidden" type="hidden" name="_method" value="PUT">
   <label>Content</label>
   <input type="text" name="content" value="<%= @tweet.content %>" required>
-
-  <input type="submit" value="submit">
+  
+  <input type="submit" value="submit"></input>
 </form>
