--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,7 +1,7 @@
 <h1>Welcome, <%= current_user.username%></h1>
 <p>Click on your tweet for more options</p>
 
-<% Tweet.all.each do |tweet| %>
+<% @tweets.each do |tweet| %>
 <p><a href="/tweets/<%= tweet.id %>"><%= tweet.content %></a></p>
 <% end %>
 
