--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,10 +1,18 @@
-<h1>Edit your Tweet below</h1>
+<!-- <h1>Edit your Tweet below</h1>
 
-<form action="/tweets/<%= @tweet.id %>" method="POST">
+<form method="POST" action="/tweets/<%= @tweet.id %>" >
 
-  <input id="hidden" type="hidden" name="_method" value="PUT">
+  <input id="hidden" type="hidden" name="_method" value="PATCH">
   <label>Content</label>
   <input type="text" name="content" value="<%= @tweet.content %>" required>
   
-  <input type="submit" value="submit"></input>
+  <input type="submit" value="submit">
+</form> -->
+
+<h2> Edit Tweet </h2>
+
+<form method="post" action="/tweets/<%=@tweet.id%>">
+  <input id="hidden" type="hidden" name="_method" value="PATCH">
+  <input type="text" name="content" value="<%= @tweet.content %>">
+  <input type="submit" value="submit">
 </form>
