--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,4 +1,4 @@
-<!-- <h1>Edit your Tweet below</h1>
+<h1>Edit your Tweet below</h1>
 
 <form method="POST" action="/tweets/<%= @tweet.id %>" >
 
@@ -6,13 +6,5 @@
   <label>Content</label>
   <input type="text" name="content" value="<%= @tweet.content %>" required>
   
-  <input type="submit" value="submit">
-</form> -->
-
-<h2> Edit Tweet </h2>
-
-<form method="post" action="/tweets/<%=@tweet.id%>">
-  <input id="hidden" type="hidden" name="_method" value="PATCH">
-  <input type="text" name="content" value="<%= @tweet.content %>">
   <input type="submit" value="submit">
 </form>
