--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -6,9 +6,7 @@
 <a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
 
 <form method="POST" action="/tweets/<%= @tweet.id %>/delete">
-<!-- <input id="hidden" type="hidden" name="_method" value="Delete Tweet"> -->
+<input id="hidden" type="hidden" name="_method" value="Delete Tweet">
 <br><br>
 <button type="submit" name="Delete Tweet" value="Delete Tweet">Delete Tweet</button>
 </form>
-<!-- create form for delete function -->
-<!-- The delete form doesn't need to have any input fields, just a submit button. -->
