cleaned up and added more navigation

--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -10,3 +10,5 @@
   <input id="hidden" type="hidden" name="_method" value="delete">
   <p><input type="submit" value="Delete Tweet"></p>
 </form>
+
+<h3><a href="/tweets">HOME</a></h3>
