--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet"
-    href="stylesheets/style.css">
+    href="/stylesheets/style.css">
   </head>
   <body>
 
