--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -3,5 +3,5 @@
   <form action="/tweets" method="POST">
     <h3>New Tweet: </h3><textarea id="content" type="text" name="content" rows="3" cols="30" value=""></textarea>
 
-    <p><input type="submit" value="submit"></p>
+    <p><input class="round-button-circle" type="submit" value="submit"></p>
   </form>
