--- a/app/views/layouttesting.erb
+++ b/app/views/layouttesting.erb
@@ -24,8 +24,8 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                <ul class="nav navbar-nav">
-
-                  <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
+                  <li class="<%= 'active' if current_page?(controller: "/") %>"><%= link_to "Home", "/" %></li>
+                  <!-- <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li> -->
                   <li><a href="/tweets">Tweets</a></li>
                   <li class="dropdown">
                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
