--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,1 +1,8 @@
-<h1>test</h1>
+<h1>Welcome, <%=current_user.username %> </h1>
+
+<% @tweets.each do |tweet| %>
+<a href="tweets/<%=tweet.id%>/edit"> <%=tweet.content %></a><br>
+<%end%>
+
+<a href="/tweets/new">Create New Tweet</a><br>
+<a href="/logout">Logout</a>
