--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -7,5 +7,5 @@
 <form action="/login" method="post">
   <h2>Username: <input type="text" name="username"></input></h2>
   <h2>Password: <input type="password" name="password"></input></h2>
-  <input type="submit" value="Log In">
+  <input type="submit" value="submit">
 </form>
