--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -1,4 +1,7 @@
 <%= @tweet.content %>
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
+<form action="/tweets/<%=@tweet.id%>" method="post">
+  <input type="hidden" name="_method" value="delete">
+  <input type="submit" value="Delete Tweet"></input>
+</form>
 
-<a href='/tweets/<%=@tweet.id%>/delete'>Delete Tweet</a>
-<a href='/tweets/<%=@tweet.id%>/edit'>Edit Tweet</a>
