--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,9 +1,13 @@
 <h1>Welcome to Fwitter</h1>
 
-<a href='/signup'>Sign Up</a>
+<% if logged_in? %>
+  <h2>Hello, <%=current_user.username %></h2>      
+  <a href="/tweets/new"> Create Tweet </a>
+  </br>
+  <a href="/logout"> Log Out </a>
 
-<% if !logged_in? %>
-  <a href=/'login'>Log In</a>
+
 <% else %>
-  <a href='/logout'>Log Out</a>
-<% end %>
+  <a href="/signup">Sign Up</a>
+  <a href="/login"> Sign In </a>
+<%end %>
