--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,6 +1,6 @@
 <h2>Add a tweet</h2>
 
 <form action="/tweets" method="POST">
-  <p>Status: <input type="text" name="content"></p>
-  <input class="btn btn-primary" type="submit" value="submit">
+  <p>Type your tweet here: <input type="text" name="content"></p>
+  <input type="submit" value="submit">
 </form>
