broken rack::Flash

--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,7 +1,6 @@
-<% unless locals.empty? %>
-  <%= message %>
+<% if flash.has?(:message) %>
+  <%= flash[:message] %>
 <% end %>
-
 
 <h1>Create a new Fwitter Account</h1>
 
