--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -4,6 +4,6 @@ Welcome, <%= @user.username %>. &nbsp;<a href="/tweets/new">Add new tweet</a>&nb
 <h3>What's everyone up to?</h3>
 <ul>
   <% @tweets.each do |tweet| %>
-    <li><%= tweet.user.username %> says: <%= tweet.content %> &nbsp;<a href="/tweets/<%= tweet.id %>/edit">Edit</a>&nbsp;<a href="/tweets/<%= tweet.id %>">Delete</a></li>
+    <li><a href="/users/<%= tweet.user.slug %>"><%= tweet.user.username %></a> says: <%= tweet.content %> &nbsp;<a href="/tweets/<%= tweet.id %>/edit">Edit</a>&nbsp;<a href="/tweets/<%= tweet.id %>">Delete</a></li>
   <% end %>
 </ul>
