--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,19 +1,8 @@
-<%if Helpers.is_logged_in?(session)%>
-      <%user = Helpers.current_user(session)%>
-    <p>Welcome, <%=user.username%>!</p>
-    <%Tweet.all.each do |tweet| %>
-    <%if tweet.user_id == nil%>
-      <p>anon</p>
-    <%else%>
-      <%=User.find(tweet.user_id).username%>
-    <%end%>
-      <p> - - - - - - - - - - - - - - - - - </p>
-        <%=tweet.content%>
-      <p>===================================</p>
-    <%end%>
-    <p><a href="/logout">logout</a></p>
-    <p><a href="/tweets/new">make a NEW tweet</a></p>
-<%else%>
-  <h3>-You Must <a href="/">Log In</a></h3>
+<p> Welcome <%= current_user.username %>
+<h2> Tweets </h2>
 
-<%end%>
+<% @tweets.each do |tweet| %>
+  <div>
+    <%= tweet.content %>
+  </div>
+<% end %>
