--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,6 +1,2 @@
-<h1>Welcome to Fwitter!</h1>
 
-<h2>Create and share your tweets!</h2>
-
-<h3><a href="/login">Log In</a></h3>
-<h3><a href="/signup">Sign Up</a></h3>
+<h2> Welcome to Fwitter </h2>
