--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,6 +1,5 @@
-<h2>Create a New Tweet</h2>
-<form action="/tweets" method="post">
-  <p>Compose your tweet:</p>
-  <textarea name="content" rows="4" cols="50"></textarea><br>
-  <input type="submit" value="Submit">
+<h2>Add a tweet</h2>
+<form action="/tweets" method="POST">
+  <p>Status: <input type="text" name="content"></p>
+  <input class="btn btn-primary" type="submit" value="submit">
 </form>
