--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,20 +1,7 @@
-<%if Helpers.is_logged_in?(session)%>
-      <%@user = Helpers.current_user(session)%>
-    <p>Welcome, <%=@user.username%>!</p>
-<%else%>
-  <p>You must be <a href="/">logged in</a> before you can proceed.</p>
-<%end%>
+<h2> Edit Tweet </h2>
 
-<%if @tweet.user_id == @user.id%>
-  <label>Edit the tweet!</label>
-  <form action="/tweets/<%=@tweet.id%>" method="POST">
+<form method="post" action="/tweets/<%=@tweet.id%>">
   <input id="hidden" type="hidden" name="_method" value="PATCH">
-  <input type="text" name="content"><%=@tweet.content%></input>
-  <input type="hidden" value="<%=@user.id%>" name="user_id">
+  <input type="text" name="content" value="<%= @tweet.content %>">
   <input type="submit" value="submit">
-  </form>
-
-<%else%>
-  <h3>What is this funny business?  Go <a href="/">here.</a></h3>
-
-<%end%>
+</form>
