--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,13 +1,8 @@
-<%if Helpers.is_logged_in?(session)%>
-      <%user = Helpers.current_user(session)%>
-    <p>Welcome, <%=user.username%>!</p>
-    <p><%=@tweet.content%></p>
-    <br></br>
-    <p><a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a></p>
-    <form action="/tweets/<%=@tweet.id%>/delete" method="post">
-    <input id="hidden" type="hidden" name="_method" value="DELETE">
-    <input type="submit" value="Delete Tweet" id="button"></form>
-<%else%>
-  <h3>-You Must <a href="/">Log In</a></h3>
+<p><%= @tweet.content %>
 
-<%end%>
+<form method="post" action="/tweets/<%=@tweet.id%>/delete">
+  <input id="hidden" type="hidden" name="_method" value="DELETE">
+  <input type="submit" value="Delete Tweet">
+</form>
+
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet </a>
