--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,8 +1,8 @@
- <h3>Log In Please</h3>
 
-<form method="POST" action="/login">
-      <p>Username:<input type="text" name="username"></p>
-      <p>Password:<input type="text" name="password"></p>
-      <!-- email? -->
-    <input type="submit" value="submit" id="button">
-    </form>
+<h1>Login to Fwitter!</h1>
+<form method="post" action="/login">
+  <input type="text" name="username" placeholder="Username:">
+  <input type="text" name="password" placeholder="Password:">
+
+  <input type="submit" value="submit">
+</form>
