--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,1 +1,8 @@
-<h1>Tweets</h1>
+<h1> Welcome,  </h1>
+<h2> Tweets </h2>
+
+<% @tweets.each do |tweet| %>
+  <div>
+    <h5><%= tweet.content %></h5>
+  </div>
+<% end %>
