--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -5,5 +5,5 @@
   <br> <br>
   <label> Password: <input type="text" name="user[password]"></label>
   <br> <br>
-  <input type="submit" name="log in">
+  <input type="submit" name="submit" id="submit">
 </form>
