working through some tweets controller errors

--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,16 +1,8 @@
-<h2>Welcome, <%=@user.username%></h2>
+<p> Welcome <%= current_user.username %>
+<h2> Tweets </h2>
 
-<%Tweet.all.each do |tweet|%>
-
-  <%if @user != User.find(tweet.user_id)%>
-    <%@friend = User.find(tweet.user_id)%>
-    <p><%=@friend.username%></p>
-    <p><%=tweet.content%></p>
-
-  <%else%>
-    <p><%=@user.username%></p>
-    <p><%=tweet.content%></p>
-    <br/>
-
-  <%end%>
-<%end%>
+<% @tweets.each do |tweet| %>
+  <div>
+    <%= tweet.content %>
+  </div>
+<% end %>
