--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -2,8 +2,8 @@
 
 <form action="/login" method="post">
   
-<p>Username <input type="text" name="username" id="username"></p>
-<p>Password <input type="text" name="password" id="password"></p>
+<p>Username: <input type="text" name="username" id="username"></p>
+<p>Password: <input type="text" name="password" id="password"></p>
 
 <input type="submit" value="submit">
 </form>
