--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,8 +1,6 @@
-<p><%= @tweet.content %>
+<%= @tweet.content %>&nbsp;&nbsp;<a href="/tweets/<%= @tweet.id%>/edit">Edit Tweet</a>
 
-<form method="post" action="/tweets/<%=@tweet.id%>/delete">
+<form method="POST" action="/tweets/<%= @tweet.id %>/delete">
   <input id="hidden" type="hidden" name="_method" value="DELETE">
   <input type="submit" value="Delete Tweet">
 </form>
-
-<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
