--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,7 +1,7 @@
 <h1>Login</h1>
 
 <form action="/login" method="POST">
-  <input type="email" name="email" placeholder="Email">
+  <input type="text" name="username" placeholder="Username">
   <input type="password" name="password" placeholder="Password">
 
   <input type="submit" name="Login" value="submit">
