--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,7 +7,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
 
-  <title>BlogPost</title>
+  <title>Ftwitter</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -19,7 +19,7 @@
       <%= yield %>
 
     <footer class="branding">
-      <small>&copy; 2016 <strong>BlogPost</strong></small>
+      <small>&copy; 2016 <strong>Ftwitter</strong></small>
     </footer>
   </div>
 
