--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -9,6 +9,6 @@
 
   <input type="password" name="password" placeholder="Password">
 
-  <input type="submit" name="Signup" value="submit">
+  <input type="submit" value="submit">
  
 </form>
