--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -4,5 +4,5 @@
   <input type="text" name="username" placeholder="Username">
   <input type="password" name="password" placeholder="Password">
 
-  <input type="submit" name="Login" value="submit">
+  <input type="submit" value="submit">
  </form> 
