--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -4,5 +4,5 @@
 
 <label>Please type your tweet here:</label>
 <input type="text" name="content">
-
-<input type="submit">
+  
+<input type="submit" value="submit">
