--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,5 +1,14 @@
 <h1>Tweets</h1>
 
-<% @tweets.each do |tweet| %>
-  <%tweet.content%>
-<%end%>  
+<h3><%=@tweet.content%></h3>
+
+
+
+<form action="/tweets/<%= @tweet.id %>/edit">
+  <input type="submit" value="Edit Tweet">
+</form>
+
+<form action="/tweets/<%= @tweet.id %>/delete" method="post">
+  <input id="hidden" type="hidden" name="_method" value="delete">
+  <input type="submit" value="Delete Tweet">
+</form>
