--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -3,6 +3,6 @@
 <form action="/tweets" method="POST">
 
 <label>Please type your tweet here:</label>
-<input type="text" name="content">
+<input type="text" name="content" id="content">
   
 <input type="submit" value="submit">
