--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,9 +1,8 @@
 <h1>Update a Tweet</h1>
 
-<form action="/tweets/<%=@tweet.id%>" method="POST">
+<form action="/tweets/<%=@tweet.id%>/edit" method="POST">
 <input id="hidden" type="hidden" name="_method" value="patch">
 
-<label>Please type your tweet here:</label>
-<input type="text" name="content" value="<%=@tweet.content%>">
+<input type="text" id="content" name="content" value="<%=@tweet.content%>">
   
-<input type="submit" value="Update">
+<input type="submit" value="submit">
