--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,6 +7,7 @@
 	<body>
 	<nav>
 		<% if is_logged_in? %>
+		<a href="/tweets/new">Create a New Tweet</a>
 		<a href="/logout">Log Out</a>
 		<p>Welcome <%= current_user.username %></p>
 
