--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,4 +1,7 @@
 <h2>Welcome, <%= @user.username %>!</h2>
+<% if flash.has?(:message) %>
+	<%= flash[:message] %>
+<% end %>
 <p>Here are your tweets!</p>
 <% Tweet.all.each do |tweet| %>
 	<li><%= tweet.content %></li>
