--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,6 +1,6 @@
 <form action="/login" method="post">
 <h2>Please enter a username and password to login</h2>
-	<p>Username: <input type="text" name ="user[username]"></p> 
-	<p>Password: <input type="text" name ="user[password]"></p>
+	<p>Username: <input type="text" name ="username"></p> 
+	<p>Password: <input type="text" name ="password"></p>
 	<button value="submit">Log In</button>
 </form>
