--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,7 +1,7 @@
 <form action="/signup" method="post">
 <h2>Please enter username, password, and email to register</h2>
-	<p>Username: <input type="text" name ="user[username]"></p> 
-	<p>Password: <input type="text" name ="user[password]"></p>
-	<p>Email: <input type="text" name ="user[email]"></p>
+	<p>Username: <input type="text" name ="username"></p> 
+	<p>Password: <input type="text" name ="password"></p>
+	<p>Email: <input type="text" name ="email"></p>
 	<button value="submit">Sign Up</button>
 </form>
