--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -1,5 +1,7 @@
 <h2>Welcome, <%=@user.username%></h2>
+<%Tweet.all.each do |tweet|%>
+<p><a href="/tweets/<%=tweet.id%>"><%=tweet.content%></a></p>
+<%end%>
 <a href="/logout">
 	<button>Log out</button>
-	
 </a>
