--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,5 +1,6 @@
 <h1>Welcome, <%= current_user.username %>!</h1>
 
-<% Tweet.all.each do |tweet| %>
-  <p><%= tweet.content %></p>
+<% Tweet.all.each.with_index(1) do |tweet, i| %>
+  <p><%= "#{i}. " %><%= tweet.content %></p>
+  <p><%= "@" %><%= tweet.user.username %></p>
 <% end %>
