--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
-    <head></head>
+<head></head>
 
-    <body>
-        <%= yield %>
-    </body>
+<body>
+    <% if session[:id].nil? %>
+        <a href="/signup">Sign Up</a>
+        <a href="/login">Log In</a>
+    <% else %>    
+        <a href="/logout">Log Out</a>
+    <% end %>
+    <%= yield %>
+</body>
