--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,1 +1,5 @@
-<h1>Your Tweets:</h1>
+<h1>Welcome, <%= @user.username %></h1>
+
+<% @user.tweets.each do |tweet| %>
+    <p><%= tweet.content %></p>
+<% end %>
