--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,7 +1,43 @@
-<h3>Sign Up</h3>
-<form action="/signup" method="POST">
-  <input type="text" name="username" placeholder="Username:"><br>
-  <input type="text" name="email" placeholder="Email:"><br>
-  <input type="password" name="password" placeholder="Password:"><br>
-  <input type="submit" value="Sign Up">
-</form>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 col-md-offset-4">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <span class="glyphicon glyphicon-lock"></span> Create your account</div>
+                <div class="panel-body">
+                    <form action="/signup" method="post" class="form-horizontal" role="form">
+                      <div class="form-group">
+                          <label for="usr_n" class="col-sm-3 control-label">
+                              Username</label>
+                          <div class="col-sm-9">
+                              <input type="text" name="username" class="form-control" id="usr_n" placeholder="Username" required>
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <label for="email" class="col-sm-3 control-label">
+                              Email</label>
+                          <div class="col-sm-9">
+                              <input type="email" name="email" class="form-control" id="email" placeholder="Email" required>
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <label for="pass" class="col-sm-3 control-label">
+                              Password</label>
+                          <div class="col-sm-9">
+                              <input type="password" name="password" class="form-control" id="pass" placeholder="Password" required>
+                          </div>
+                      </div>
+
+                      <div class="form-group last">
+                          <div class="col-sm-offset-3 col-sm-9">
+                              <button type="submit" class="btn btn-success btn-sm">
+                                  Create account</button>
+
+                          </div>
+                      </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
