Added complete controllers and erb.

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Fwitter</title>
+    <title></title>
   </head>
+
   <body>
     <%= yield %>
   </body>
