--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Fwitter</title>
-</head>
-<body>
-  <h1>Welcome to Fwitter</h1>
-  <br></br>
-  <h4><a href="/login">Login</a> or <a href="/signup">Sign Up</a></h4>
-</body>
-</html>
+<h1>Welcome to Fwitter</h1>
+<h3><a href="/signup">Sign Up</a></h3>
+<h3><a href="/login">Log In</a></h3>
