--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Fwitter</title>
-</head>
-<body>
-  <h1>Create a new tweet:</h1>
-  <br></br>
-  <form action="/tweets" method="POST">
-    <input type="text" name="content">
-    <input type="submit" id="submit">
-  </form>
-</body>
-</html>
+<form method="POST" action="/tweets">
+  <p>Create a Tweet</p>
+  <input type="text" name="content">
+  <input type="submit" value="submit">
+</form>
