--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,14 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Fwitter</title>
-</head>
-<body>
-<h2>Edit Tweet:</h2>
- <form action="/tweets/<%=@tweet.id%>" method="POST">
-   <input type="hidden" name="_method" value="patch" id="hidden">
-   <input type="text" name="content" value="<%=@tweet.content%>">
-   <input type="submit" id="submit">
- </form>
-</body>
-</html>
+<h3>Edit Tweet</h3>
+
+<form method="post" action="/tweets/<%= @tweet.id %>">
+  <input type="hidden" name="_method" value="PATCH">
+  <input type="text" name="content" value="<%= @tweet.content%>">
+  <input type="submit" value="submit">
+</form> 
