--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,15 +1,8 @@
-<!DOCTYPE html
-<html>
-<head>
-  <title>Fwitter</title>
-</head>
-<body>
-  <h1>Create Your Account</h1>
-  <form action="/signup" method="POST">
-    <p>Name: <input type="text" name="username" id="username"></p>
-    <p>Email: <input type="text" name="email" id="email"></p>
-    <p>Password: <input type="text" name="password" id="password"></p>
-    <input type="submit" value="Log In" id="submit">
-  </form>
-</body>
-</html>
+<h2>Sign up for Fwitter</h2>
+ 
+<form method="POST" action="/signup">
+  Username: <input type="text" name="username"><br><br>
+  Email: <input type="text" name="email"><br><br>
+  Password: <input type="password" name="password"><br><br>
+  <input type="submit" value="Sign Up">
+</form>
