--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Fwitter</title>
-</head>
-<body>
-  <h1>Log In</h1>
-    <br></br>
-    <form action="/login" method="POST">
-      <p>Username: <input type="text" name="username" id="username"></p>
-      <p>Password: <input type="text" name="password" id="password"></p>
-      <input type="submit" value="Log In" id="submit">
-    </form>
-</body>
-</html>
+<h2>Welcome to Fwitter</h2>  
+<h3>Log In</h3>
+<form method="POST" action="/login">
+  Username: <input type="text" name="username"><br><br>
+  Password: <input type="password" name="password"><br><br>
+  <input type="submit" value="submit"> or <a href="/signup">Sign Up</a>
+</form> 
+<br>
+
