--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,6 +1,5 @@
 <%= @tweet.content %>
-
 <form method="POST" action="/tweets/<%= @tweet.id %>/delete">
   <input id="hidden" type="hidden" name="_method" value="DELETE">
-  <input type="submit" value="Delete Tweet">
-</form>
+  <input type="submit" value="Delete Tweet"> or <a href="/tweets/<%= @tweet.id%>/edit">Edit Tweet</a>
+</form> 
