--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -3,7 +3,7 @@
 <form action="/tweets" method="POST">
 
   <label for='tweet_content'>Compose</label>
-  <input type="text" name="content" id='tweet_content'>
+  <input type="text" name="tweet[content]" id='tweet_content'>
 
   <input type="submit" value="tweet">
   
