--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -2,5 +2,5 @@
 <form method="post" action="/login">
   <input type="text" name="username" placeholder="Username">
   <input type="password" name="password" placeholder="password">
-  <input type="submit">
+  <input type="submit" value="submit">
 </form>
