--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -4,7 +4,7 @@
   <input type="text" name="user[username]" id="user_username">
 
   <label for='user_email'>Email:</label>
-  <input type="text" name="user[email]"" id="user_email">
+  <input type="text" name="user[email]" id="user_email">
 
   <label for='user_password'>Password:</label>
   <input type="password" name="user[password]" id="user_password">
