--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,3 +1,8 @@
+<% if flash.has?(:message) %>
+  <%= flash[:message] %>
+<% end %>
+
+
 <h1>Sign up below:</h1>
 
 <form method="POST" action="/signup">
