--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -2,13 +2,13 @@
 <form method="POST" action="/login">
   <label>Username:</label>
 
-  <input type="text" name="user[username]" id="username">
+  <input type="text" name="username" id="username">
 
   <br></br>
 
   <label>Password:</label>
 
-  <input type="text" name="user[password]" id="password">
+  <input type="text" name="password" id="password">
 
   <br></br>
 
