--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -8,19 +8,19 @@
 <form method="POST" action="/signup">
   <label>Username:</label>
 
-  <input type="text" name="user[username]" id="name">
+  <input type="text" name="username" id="username">
 
   <br></br>
 
   <label>Email:</label>
 
-  <input type="text" name="user[email]" id="email">
+  <input type="text" name="email" id="email">
 
   <br></br>
 
   <label>Password:</label>
 
-  <input type="text" name="user[password]" id="password">
+  <input type="text" name="password" id="password">
 
   <br></br>
 
