--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -2,9 +2,9 @@
 
 <form action="/tweets" method="POST">
 
-  <label for='tweet_content'>Compose</label>
-  <input type="text" name="tweet[content]" id='tweet_content'>
+  <label for='content'>Compose</label>
+  <input type="text" name="content" id='content'>
 
-  <input type="submit" value="tweet">
+  <input type="submit" value="submit">
   
 </form>
