--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,3 +1,9 @@
-<% current_user.tweets.each do |tweet| %>
-  <p><%= tweet.content %></p>
-<% end %>
+<p><%= @tweet.content %></p>
+
+<a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
+
+<form method="POST" action="/tweets/<%= @tweet.id %>/delete">
+    <input id ="hidden" type="hidden" name="_method" value="delete">
+    <br></br>
+    <input type="submit" value="Delete Tweet" id="Delete Tweet">
+  </form>
