--- a/app/views/users/user_tweets.erb
+++ b/app/views/users/user_tweets.erb
@@ -1,3 +1,6 @@
+<p>Here are your tweet, <%= current_user.username %></p>
 <% current_user.tweets.each do |tweet| %>
-  <p><%= tweet.content %></p>
+  <div>
+    <%= tweet.content %>
+  </div>
 <% end %>
