--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,6 +1,6 @@
 <h1>What's on your mind?</h1>
 <form method="POST" action="/tweets">
-  <input type="text" name="content" id="content">
+  <input type="text" name="content">
   <br></br>
   <input type="submit" value="submit">
 </form>
