--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,7 +1,7 @@
 <h1>Edit tweet:</h1>
 <form method="POST" action="/tweets/<%= @tweet.id %>">
   <input id="hidden" type="hidden" method="_method" value="patch">
-  <input type="text" name="content" id="content" placeholder="<%= @tweet.content %>">
+  <input type="text" name="content" value="<%= @tweet.content %>">
   <br></br>
   <input type="submit" value="submit">
 </form>
