--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -1,7 +1,10 @@
 <h1>Welcome, <%= current_user.username %>!</h1>
+<h2>Tweets</h2>
 
 <% @tweets.each do |tweet| %>
-  <p><%= tweet.content %></p>
+  <div>
+    <%= tweet.content %>
+  </div>
 <% end %>
 
 
