--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,6 +1,6 @@
 <%= @tweet.content %>
 
-<form action='/tweets/<%=tweet.id%>/delete' method='POST'>
+<form action='/tweets/<%= @tweet.id%>/delete' method='POST'>
   <input type="hidden" name="_method" id="hidden" value="DELETE">
   <input type="submit" value="Delete Tweet">
 </form>
