--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -3,9 +3,9 @@
 <form action="/tweets/<%=@tweet.id%>" method="POST">
   <input type="hidden" name="_method" value='patch'>
 
-  <label for="tweet_content">Tweet</label>
-  <input type="text" name="tweet[content]" id='content' value='<%=@tweet.content%>'><br>
+  <label>Tweet</label>
+  <input type="text" name="content" id='content' value='<%=@tweet.content%>'><br>
 
-  <input type="submit" value="Edit Tweet">
+  <input type="submit" value="submit">
 
 </form>
