--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,13 +1,13 @@
 <form action='/signup' method='POST'>
   
-  <label for='user_username'>Username:</label>
-  <input type="text" name="user[username]" id="user_username">
+  <label for='username'>Username:</label>
+  <input type="text" name="username" id="username">
 
-  <label for='user_email'>Email:</label>
-  <input type="text" name="user[email]" id="user_email">
+  <label for='email'>Email:</label>
+  <input type="text" name="email" id="email">
 
-  <label for='user_password'>Password:</label>
-  <input type="password" name="user[password]" id="user_password">
+  <label for='password'>Password:</label>
+  <input type="password" name="password" id="password">
 
-  <input type="submit" name="Sign Up">
+  <input type="submit" id="submit" value="submit" name="Sign Up">
 </form>
