--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,6 +1,6 @@
 <h1>Please log in to Fwitter</h1>
 <form method="post" action="/login">
-  <input type="text" name="username" placeholder="Username">
+  <input type="text" name="username" placeholder="username">
   <input type="password" name="password" placeholder="password">
   <input type="submit" value="submit">
 </form>
