--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,6 +1,6 @@
 <h1>Edit tweet:</h1>
 <form method="POST" action="/tweets/<%= @tweet.id %>">
-  <input id="hidden" type="hidden" method="_method" value="patch">
+  <input id="hidden" type="hidden" name="_method" value="PATCH">
   <input type="text" name="content" value="<%= @tweet.content %>">
   <br></br>
   <input type="submit" value="submit">
