--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,3 @@
-<h1>Welcome To Fwitter!</h1>
+<h1>Welcome to Fwitter!</h1>
+<h3><a href="/signup">Sign Up</a></h3>
+<h3><a href="/login">Login</a></h3>
