--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -4,7 +4,7 @@
 
 <p>Go ahead, kid, create a tweet!</p>
 
-<input type="textarea" cols="40" rows="5" name="tweet[content]" id="tweet_content">
+<input type="textarea" cols="40" rows="5" name="tweet[content]" id="content">
 <br></br>
 <input type="submit" value="Create a New Tweet" id="submit">
 
