--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,9 +1,12 @@
-<form action='/tweets/<%=@tweet.id%>' method="POST"
-  <input id="hidden" type="hidden" name="_method" value="patch">
+<h2>The Tweet to Edit:</h2>
+
+<form action='/tweets/<%=@tweet.id%>' method="POST">
 
   <input type="text" name="tweet[content]" placeholder="<%=@tweet.content%>" id="content">
+<br></br>
+  <input type="submit" value="edit" id="submit">
 
 
-  <input id="submit" type="submit" value="edit">
 </form>
 
+<!---    <input id="hidden" type="hidden" name="_method" value="patch" -->
