--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -4,5 +4,5 @@
   <br></br>
   <input type="password" name="password" placeholder="Password:">
   <br></br>
-  <input type="submit" value="Log In" id"submit">
+  <input type="submit" value="Log In" id="submit">
 </form>
