--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -2,12 +2,13 @@
 
 <h3><%=@tweet.content%> - <%=@user.username%></h3>
 
-  <p>Click this link to <a href="/tweets/<%=@tweet.id%>/edit">Edit This Tweet<a/>
+  <p>Click this link to <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet<a/>
 
 
 <form method="post" action="/tweets/<%= @tweet.id %>/delete">
-  <input id="hidden" type="hidden" name="_method" value="DELETE">
-  <input type="submit" value="delete" id="submit">
+
+  <input type="submit" value="Delete Tweet" id="Delete Tweet">
 </form>
 
 
+<!---  <input id="hidden" type="hidden" name="_method" value="DELETE"> -->
