--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,5 +1,5 @@
 <h3>Sign Up</h3>
-<form action="/create_user" method="POST">
+<form action="/signup" method="POST">
   <input type="text" name="username" placeholder="Username:">
   <br></br>
   <input type="password" name="password" placeholder="Password:">
