--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,6 @@
-<h1>Welcome to Fwitter!</h1>
-<h3><a href="/signup">Sign Up</a></h3>
-<h3><a href="/login">Login</a></h3>
+<div class="panel panel-default">
+  <div class="panel-body">
+    <a class="btn btn-warning" href="/signup">Sign Up</a>
+    <a class="btn btn-success" href="/login">Login</a>
+  </div>
+</div>
