--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -8,5 +8,5 @@
     <label for="password">Password:</label>
     <input type="text" name="password" id="password" />
   </p>
-  <input type="submit"/>
+<button type="submit" value="submit">Submit</button>
 </form>
