--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,4 +1,4 @@
-<h2>Show Tweet</h2>
+<h2>Show Your Tweet</h2>
 
 <p><%= @tweet.content %></p>
 
@@ -7,4 +7,4 @@
   <input type="submit" value="Delete Tweet">
 </form>
 
-<a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
+<a href="/tweets/<%= @tweet.id %>/edit">Edit Your Tweet</a>
