--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Welcome to Fwitter!</h1> <br>
-    <a href="/signup">Signup</a><br><br> or <br><br><a href="/users/login">Log In</a>
+    <a href="/signup">Signup</a><br><br> or <br><br><a href="/login">Log In</a>
   </body>
 </html>
