--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,1 +1,9 @@
-create_tweet.erb
+<h1>Create a Tweet</h1>
+
+<form action='/tweets' method='post'>
+
+<h4>Content: <input type="text" name="content"></h4>
+
+<input type="submit" value="submit">
+
+</form>
