--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,1 +1,10 @@
-login.erb
+<h1>Login to Fwitter</h1>
+
+<form action="/login" method="post">
+  
+  <h4>Username: <input type="text" name="username"></h4>
+  <h4>Password: <input type="text" name="password"></h4>
+
+  <input type="submit" value="Log In" id="submit">
+
+</form>
