--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -2,7 +2,7 @@
 
 <h3><%=@tweet.content%> - <%=@user.username%></h3>
 
-  <p>Click this link to <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet<a/>
+  <p>Click this link to <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
 
 
 <form method="post" action="/tweets/<%= @tweet.id %>/delete">
@@ -11,4 +11,3 @@
 </form>
 
 
-<!---  <input id="hidden" type="hidden" name="_method" value="DELETE"> -->
