--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,4 +1,4 @@
-<h3>Sign Up</h3>
+><h3>Sign Up</h3>
 <form action="/signup" method="POST">
   <input type="text" name="username" placeholder="Username:">
   <br></br>
@@ -7,4 +7,4 @@
   <input type="email" name="email" placeholder="Email:">
   <br></br>
   <input type="submit" value="Sign Up">
-</form>
+</form
