--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -12,6 +12,7 @@
 <br></br>
 <form method="post" action="/tweets/<%= @tweet.id %>/delete">
   <input type="submit" value="Delete Tweet" id="Delete Tweet">
+  <input id="hidden" type="hidden" name="_method" value="delete">
 </form>
 <br></br>
 <form method="get" action="/tweets">
