Add edit and delete features

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -6,4 +6,11 @@
   <body>
     <%= yield %>
   </body>
+  <footer>
+    <br>
+    <!-- <form class="logout" action="logout" method="post">
+      <input type="submit" name="logout" id="logout" value="logout">
+    </form> -->
+    <a href="/logout">Logout</a>
+  </footer>
 </html>
