--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,5 +1,5 @@
 <h3>Create a tweet</h3>
 <form class="" action="/tweets" method="POST">
   <input type="text" name="content" id="content" value="">
-  <input type="submit" name="submit" value="Create Tweet">
+  <input type="submit" name="submit" id="submit" value="Create Tweet">
 </form>
