--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,1 +1,65 @@
-<%= yield %>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>fwitter layout</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
+
+      <!-- Static navbar -->
+      <nav class="navbar navbar-default" role="navigation">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/" style="color:rgb(97,180,145); font-family: monospace; font-size: 2.5em; font-weight: bold">fwitter</a>
+        <% if logged_in? %>
+          
+        </div>
+          <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+              <li>
+                <a href="/users/<%= current_user.slug %>" style="color: rgb(97,180,145);font-family: monospace;font-size: 1em; font-weight:bold">My Tweets</a>
+              </li>
+              <li>
+                <a class="bluelink" href="/tweets/new" style="color: rgb(97,180,145);font-family: monospace;font-size: 1em; font-weight:bold"> New Tweet</a>
+              </li>
+              <li>
+                <a class="bluelink" href="/tweets" style="color: rgb(97,180,145);font-family: monospace;font-size: 1em; font-weight:bold"> All Tweets</a>
+              </li>
+              <li>
+                <a class="bluelink" href="/logout" style="color: rgb(97,180,145);font-family: monospace;font-size: 1em; font-weight:bold"> Logout</a>
+              </li>
+                <a class="greeting" style="color: rgb(97,180,145) ; font-family: monospace; font-size: 1em; font-weight:bold;"><u>Welcome, <%= current_user.username %></u></a>
+              </li>
+            </ul>
+        <% end %>
+        </div><!--/.nav-collapse -->
+
+      </nav>
+
+      <div>
+            <%if @error then %>
+                <div class="alert alert-error"><%=@error%></div>
+            <% end %>
+            <%= yield %>
+      </div>
+
+  </div>
+
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="/vendor/jquery-1.9.1.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+  </body>
+</html>
