--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,7 +1,13 @@
 <%= @tweet.content %>
+<br>
+<h5>Belongs to: </h5>
 <%= @tweet.user.username %>
-<a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
-<form action="/tweets/<%= @tweet.id %>" method="POST">
-  <input id="hidden" type="hidden" name="_method" value="delete">
-  <input type="submit" value="Delete Tweet">
-</form>
+<hr>
+<% if @tweet.user == current_user %>
+  <a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
+  <hr>
+  <form action="/tweets/<%= @tweet.id %>" method="POST">
+    <input id="hidden" type="hidden" name="_method" value="delete">
+    <input type="submit" value="Delete Tweet">
+  </form>
+<% end %>
