Fwitter complete. Passing all 35 tests. Questioning sanity.

--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -6,7 +6,9 @@
   <body>
     <form action="/tweets" method="post">
       <label>Content</label>
-      <input type="text" id="content" name="tweet[:content]">
+      <input type="text" id="content" name="content">
+
+      <input type="submit" name="submit" value="submit">
     </form>
   </body>
 </html>
