--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -27,6 +27,7 @@
         <nav class="nav blog-nav">
           <a class="nav-link" href="/">Home</a>
           <% if logged_in? %>
+            <a class="nav-link" href="/tweets">Tweets</a>
             <a class="nav-link" href="/tweets/new">Create Tweet</a>
             <a class="nav-link" href="/logout">Logout</a>
           <% else %>
