--- a/app/views/tweet/tweets.erb
+++ b/app/views/tweet/tweets.erb
@@ -2,6 +2,6 @@
 
 <% @tweets.each do |tweet| %>
   <div>
-    <%= tweet.content %>
+    <a href="/tweets/<%=tweet.id%>"><%= tweet.content %></a>
   </div>
 <% end %>
