--- a/app/views/user/user_single_tweet.erb
+++ b/app/views/user/user_single_tweet.erb
@@ -3,5 +3,5 @@
   <%=@tweet.content%>
   <input type="submit" value="Delete Tweet" id="Delete Tweet">
 </form>
-<a href="/tweets/<%=@tweet.id%>/delete" name="Delete Tweet" value="Delete Tweet" id="Delete Tweet">Delete Tweet</a>
-<a href="/tweets/<%=@tweet.id%>/edit" value="Edit Tweet"></a>
+<!--<a href="/tweets/<%=@tweet.id%>/delete" name="Delete Tweet" value="Delete Tweet" id="Delete Tweet">Delete Tweet</a>
+<a href="/tweets/<%=@tweet.id%>/edit" value="Edit Tweet"></a>-->
